--- a/index.html
+++ b/index.html
@@ -34,14 +34,14 @@
             </div>
         </div>
     </div>
-    <div id="timer" >...</div>
+    <div id="timer" style="height: 15px; font-size: 40px;"></div>
     <div class="container-fluid">
-        <div class="row" style="margin-top: 15%; margin-left: 1%; padding: 0 65px;">
+        <div class="row" style="margin-top: 17%; margin-left: 1%; padding: 0 65px;">
                 <div class="col-xxl-3">
                     <button class="btn btn-danger px-5 py-3" id="rightButton" style="text-align: center; width: 400px !important; border-radius:  50px; font-size: 25px;" onclick="myButtonLeft(this)" width="600">START</button>
                 </div>
                 <div class="col-xxl-6">
-                    <h1 class="text-center" style="font-weight: 900; margin-left: -10%; font-size: 60px;">Xavfsiz Hayot</h1>
+                    <h1 class="text-center" style="font-weight: 900; margin-left: -10%; font-size: 60px; margin-top: 7%;">Xavfsiz Hayot</h1>
                 </div>
                 <!-- <div class="col-xxl-3"></div> -->
                 <div class="col-xxl-3">
