--- a/index2.html
+++ b/index2.html
@@ -35,7 +35,7 @@
         </div>
     </div>
     <!-- <div id="timer" data-aos="zoom-in" class="text-dark">Dastur ishga tushdi!</div> -->
-    <h1 class="text-center mt-4" data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="1700" style="font-size: 90px;">Dastur ishga tushirildi!</h1>
+    <h1 class="text-center mt-4" data-aos="zoom-in" data-aos-easing="linear" data-aos-duration="1700" style="font-size: 90px;">Xavfsiz hayot dasturi ishga tushirildi!</h1>
     <div class="container-fluid">
         <div class="row" style="margin-top: 16%; margin-left: 0; padding: 0 65px;">
                
